force-app/main/default/objects/Account/fields/Agency_Tier__c.field-meta.xml
<CustomField>
    <fullName>Agency_Tier__c</fullName>
    <description>Classification of the government agency level</description>
    <label>Agency Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
            <value>
                <fullName>Special District</fullName>
            </value>
            <value>
                <fullName>U.S. Territory</fullName>
            </value>
            <value>
                <fullName>Federal District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>