force-app/main/default/objects/Account/fields/API_Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Authentication_Type__c</fullName>
    <label>API Authentication Type</label>
    <description>Type of authentication required for accessing the procurement portal</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>API Key</fullName>
            </value>
            <value>
                <fullName>OAuth 2.0</fullName>
            </value>
            <value>
                <fullName>Basic Auth</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>