force-app/main/default/objects/Account/fields/Last_Scrape_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scrape_Date__c</fullName>
    <label>Last Scrape Date</label>
    <description>Date and time when the RFP feed was last successfully scraped</description>
    <type>DateTime</type>
</CustomField>