force-app/main/default/objects/Account/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <description>Reference to the Named Credential used for authenticating with this agency's portal</description>
    <type>Text</type>
    <length>255</length>
</CustomField>