force-app/main/default/objects/Account/fields/Open_Opportunities_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities_Count__c</fullName>
    <label>Open RFPs</label>
    <description>Count of open opportunities (RFPs/solicitations) for this account</description>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>