force-app/main/default/objects/Account/fields/Portal_Password__c.field-meta.xml
<CustomField>
    <fullName>Portal_Password__c</fullName>
    <label>Portal Password</label>
    <description>Password for accessing the procurement portal (encrypted)</description>
    <type>EncryptedText</type>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
</CustomField>