force-app/main/default/objects/Account/fields/Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Portal_Username__c</fullName>
    <label>Portal Username</label>
    <description>Username for accessing the procurement portal</description>
    <type>Text</type>
    <length>255</length>
</CustomField>