force-app/main/default/objects/Account/fields/Procurement_Portal_Type__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Portal_Type__c</fullName>
    <label>Procurement Portal Type</label>
    <description>Type of procurement portal platform used by the agency</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CGI Advantage</fullName>
            </value>
            <value>
                <fullName>Bidnet</fullName>
            </value>
            <value>
                <fullName>Bonfire</fullName>
            </value>
            <value>
                <fullName>Jaggaer</fullName>
            </value>
            <value>
                <fullName>OpenGov</fullName>
            </value>
            <value>
                <fullName>ProcureNow</fullName>
            </value>
            <value>
                <fullName>PlanetBids</fullName>
            </value>
            <value>
                <fullName>Periscope S2G</fullName>
            </value>
            <value>
                <fullName>DemandStar</fullName>
            </value>
            <value>
                <fullName>BidSync</fullName>
            </value>
            <value>
                <fullName>SAP Ariba</fullName>
            </value>
            <value>
                <fullName>Custom/Proprietary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>