force-app/main/default/objects/Account/fields/Procurement_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Portal_URL__c</fullName>
    <label>Procurement Portal URL</label>
    <description>URL of the government agency's procurement portal</description>
    <type>Url</type>
</CustomField>