force-app/main/default/objects/Account/fields/Procurement_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Source_Description__c</fullName>
    <label>Procurement Source Description</label>
    <description>Description of the procurement data source</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>