force-app/main/default/objects/Account/fields/Procurement_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Verification_Notes__c</fullName>
    <label>Procurement Verification Notes</label>
    <description>Notes about the procurement website verification process</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>