force-app/main/default/objects/Account/fields/Procurement_Verified_Manually__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Verified_Manually__c</fullName>
    <label>Procurement Verified Manually</label>
    <description>Indicates if the procurement website was manually verified</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>