force-app/main/default/objects/Account/fields/Procurement_Verified_On__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Verified_On__c</fullName>
    <label>Procurement Verified On</label>
    <description>Date when the procurement website was verified</description>
    <type>Date</type>
</CustomField>