force-app/main/default/objects/Account/fields/Procurement_Website_2__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Website_2__c</fullName>
    <label>Procurement Website 2</label>
    <description>Secondary procurement website URL</description>
    <type>Url</type>
</CustomField>