force-app/main/default/objects/Account/fields/Procurement_Website_Primary__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Website_Primary__c</fullName>
    <label>Procurement Website Primary</label>
    <description>Primary procurement website URL</description>
    <type>Url</type>
</CustomField>