force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <description>Geographic region of the agency</description>
    <type>Text</type>
    <length>255</length>
</CustomField>