force-app/main/default/objects/Account/fields/RFP_Feed_URL__c.field-meta.xml
<CustomField>
    <fullName>RFP_Feed_URL__c</fullName>
    <label>RFP Feed URL</label>
    <description>RSS/API feed URL for RFPs from this agency</description>
    <type>Url</type>
</CustomField>