force-app/main/default/objects/Account/fields/Scraper_Status__c.field-meta.xml
<CustomField>
    <fullName>Scraper_Status__c</fullName>
    <label>Scraper Status</label>
    <description>Current status of the automated RFP scraper for this agency</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Configured</fullName>
                <default>true</default>
                <label>Not Configured</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>