force-app/main/default/objects/Account/fields/State_Territory_Abbrev__c.field-meta.xml
<CustomField>
    <fullName>State_Territory_Abbrev__c</fullName>
    <label>State/Territory Abbrev</label>
    <description>Two-letter abbreviation for state or territory</description>
    <type>Text</type>
    <length>2</length>
</CustomField>