force-app/main/default/objects/Account/fields/Website_Research_Link__c.field-meta.xml
<CustomField>
    <fullName>Website_Research_Link__c</fullName>
    <label>Website Research Link</label>
    <description>Link used for researching agency website</description>
    <type>Url</type>
</CustomField>