force-app/main/default/objects/Account/fields/Website_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Website_Verification_Notes__c</fullName>
    <label>Website Verification Notes</label>
    <description>Notes about the website verification process</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>