force-app/main/default/objects/Account/fields/Website_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Website_Verified_By__c</fullName>
    <label>Website Verified By</label>
    <description>Person who verified the website</description>
    <type>Text</type>
    <length>255</length>
</CustomField>