force-app/main/default/objects/Account/fields/Website_Verified_Manually__c.field-meta.xml
<CustomField>
    <fullName>Website_Verified_Manually__c</fullName>
    <label>Website Verified Manually</label>
    <description>Indicates if the website was manually verified</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>