force-app/main/default/objects/Account/fields/Website_Verified_On__c.field-meta.xml
<CustomField>
    <fullName>Website_Verified_On__c</fullName>
    <label>Website Verified On</label>
    <description>Date when the website was verified</description>
    <type>Date</type>
</CustomField>