force-app/main/default/objects/Account/recordTypes/Government_Agency.recordType-meta.xml
<RecordType>
    <fullName>Government_Agency</fullName>
    <label>Government Agency</label>
    <description>Record type for government agencies that issue RFPs</description>
    <active>true</active>
</RecordType>