force-app/main/default/objects/Account/listViews/Government_Accounts.listView-meta.xml
<ListView>
    <fullName>Government_Accounts</fullName>
    <label>Government Accounts</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Government</value>
    </filters>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.Open_Opportunities_Count__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.Procurement_Portal_URL__c</columns>
    <columns>ACCOUNT.Last_Scrape_Date__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
</ListView>